gitops/applications/base/zitadel/virtual-services.yaml

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pdsl-vault-${ARGOCD_ENV_zitadel_istio_wildcard_gateway_name}
  namespace: ${ARGOCD_ENV_zitadel_istio_gateway_namespace}
spec:
  selector:
    istio: ${ARGOCD_ENV_istio_internal_gateway_name}
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.pdslkenya.com"
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pdsl-${ARGOCD_ENV_zitadel_istio_wildcard_gateway_name}
  namespace: ${ARGOCD_ENV_zitadel_istio_gateway_namespace}
spec:
  selector:
    istio: ${ARGOCD_ENV_istio_internal_gateway_name}
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.pdslkenya.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zitadel-vs
  namespace: ${ARGOCD_ENV_zitadel_namespace}
spec:
  gateways:
    #- ${ARGOCD_ENV_zitadel_istio_gateway_namespace}/${ARGOCD_ENV_zitadel_istio_wildcard_gateway_name}
    - ${ARGOCD_ENV_zitadel_istio_gateway_namespace}/pdsl-${ARGOCD_ENV_zitadel_istio_wildcard_gateway_name}
  hosts:
    - "zitadel.${ARGOCD_ENV_zitadel_dns_subdomain}"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: zitadel
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vault-vs
  namespace: vault
spec:
  gateways:
    #- ${ARGOCD_ENV_zitadel_istio_gateway_namespace}/${ARGOCD_ENV_zitadel_istio_wildcard_gateway_name}
    - ${ARGOCD_ENV_zitadel_istio_gateway_namespace}/pdsl-vault-${ARGOCD_ENV_zitadel_istio_wildcard_gateway_name}
  hosts:
    - "vault.${ARGOCD_ENV_zitadel_dns_subdomain}"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: vault-ui
            port:
              number: 8200
